--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -3,7 +3,7 @@ daysUntilStale: 15
 # Number of days of inactivity before a stale issue is closed
 daysUntilClose: 15
 # Issues with these labels will never be considered stale
-exemptLabels: false
+exemptLabels: Information
 # Label to use when marking an issue as stale
 staleLabel: *
 # Comment to post when marking an issue as stale. Set to `false` to disable
